Tue Feb 12 19:53:48 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tests/Dynamic_TP/Config_Loader/Test.cpp:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/server.cpp:
        * tests/Dynamic_TP/POA_Loader/Test.cpp:

          Fix wide character compile issues.

Tue Feb 12 19:45:02 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/FT_Naming_Service/README:

          Added discussion about backup files used for persistent
          data.

Tue Feb 12 19:34:45 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * DevGuideExamples/Multithreading/DynamicThreadPool/DynamicThreadPool.mpc:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/Dynamic_TP_POA_Test_Dynamic.mpc:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/Dynamic_TP_POA_Test_Static.mpc:
        * tests/Dynamic_TP/Config_Loader/Config_Loader.mpc:
        * tests/Dynamic_TP/POA_Loader/POA_Loader.mpc:
        * bin/tao_orb_tests.lst:

          Added avoids for corba_e_compact and corba_e_micro.

        * orbsvcs/orbsvcs/Naming/Persistent_Context_Index.h:

          Fixed versioned namespace issue.

Tue Feb 12 16:56:58 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/tests/ImplRepo/scale_clients/server.cpp:

          Fix Coverity 980636: Unchecked dynamic_cast.

Tue Feb 12 16:43:40 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/tests/ImplRepo/scale_clients/server.cpp:

          Added missing include.

Tue Feb 12 16:31:45 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/tests/ImplRepo/scale_clients/Test_i.cpp:

          Added missing include.

        * tests/Bug_4059_Regression/client.cpp:

          Fix c++11 fuzz error regarding ACE_Thread_Mutex.

        * tests/Storable/test.cpp:

          Avoid warnings about unused variables.

Tue Feb 12 16:28:13 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
