@@ -1255,19 +1255,19 @@ TAO_DynCommon::check_type (CORBA::TypeCode_ptr tc)
 bool
 TAO_DynCommon::is_basic_type_seq (CORBA::TypeCode_ptr tc)
 {
-  return (tc == CORBA::_tc_BooleanSeq
-          || tc == CORBA::_tc_OctetSeq
-          || tc == CORBA::_tc_CharSeq
-          || tc == CORBA::_tc_WCharSeq
-          || tc == CORBA::_tc_ShortSeq
-          || tc == CORBA::_tc_UShortSeq
-          || tc == CORBA::_tc_LongSeq
-          || tc == CORBA::_tc_ULongSeq
-          || tc == CORBA::_tc_LongLongSeq
-          || tc == CORBA::_tc_ULongLongSeq
-          || tc == CORBA::_tc_FloatSeq
-          || tc == CORBA::_tc_DoubleSeq
-          || tc == CORBA::_tc_LongDoubleSeq);
+  return (tc->equivalent (CORBA::_tc_BooleanSeq)
+          || tc->equivalent (CORBA::_tc_OctetSeq)
+          || tc->equivalent (CORBA::_tc_CharSeq)
+          || tc->equivalent (CORBA::_tc_WCharSeq)
+          || tc->equivalent (CORBA::_tc_ShortSeq)
+          || tc->equivalent (CORBA::_tc_UShortSeq)
+          || tc->equivalent (CORBA::_tc_LongSeq)
+          || tc->equivalent (CORBA::_tc_ULongSeq)
+          || tc->equivalent (CORBA::_tc_LongLongSeq)
+          || tc->equivalent (CORBA::_tc_ULongLongSeq)
+          || tc->equivalent (CORBA::_tc_FloatSeq)
+          || tc->equivalent (CORBA::_tc_DoubleSeq)
+          || tc->equivalent (CORBA::_tc_LongDoubleSeq));
 }
 
 CORBA::Boolean
